Status bar was a problem fixed by upgrading PhoneGap.
It's black on white which I want to invert at some point.

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body {padding:0px; padding-top:20px; background:black;}
+body {padding:0px; background:black;}
 .container {width:320px; background:black;}
 .container h1 {margin-bottom:30px; padding-left:11px;}
 .container h1 a {color:black;}
